Almost finalize v3 and code cleanup

--- a/contact.html
+++ b/contact.html
@@ -26,32 +26,30 @@
             <ul>
                 <li><a href="index.html">Karte</a></li>
                 <li><a href="info.html">Legende</a></li>
+<!--
                 <li><a href="overview.html">Übersicht</a></li>
+-->
 
             </ul>
         </section>
     </nav>
 </div>
-<div class="row" data-equalizer>
-    <div class="large-12 columns panel" data-equalizer-watch style="background-color: #ff8000">
+
+    <div class="panel callout">
         <p>Disclaimer: Dies ist eine Fanwebseite für Ingress und steht in keinem Verhältnis zu Ingress oder Niantic
             Labs.</p>
     </div>
-</div>
-<div class="row" data-equalizer>
     <!-- in case you forked the project, please provide your own contact details here-->
-    <div class="large-6 columns panel" data-equalizer-watch>
+    <div class="panel">
         Fehlt ein Mosaik? Hast du Fragen oder Hinweise zur Seite? Kontaktiert mich einfach in <a
             href="https://plus.google.com/+CarstenStemmler">Google+/Hangouts</a> oder schreibt mir eine
         <a href="mailto:tallistroan@gmail.com">E-Mail</a>.
     </div>
-    <div class="large-6 columns panel" data-equalizer-watch>
+    <div class="panel">
         <p>Achtung: Ich übernehme keine Gewähr für die Richtigkeit oder Vollständigkeit der Karte und Mosaikdaten. Im
             Zweifel sollte immer die Intel vor einer geplanten Tour angeschaut werden.</p>
     </div>
-</div>
-<div class="row" data-equalizer>
-    <div class="large-12 columns panel" data-equalizer-watch>
+    <div class="panel">
         <p>DE: Möchtest du für deine Stadt/Region selbst eine Mosaikübersicht wie diese erstellen?
             Gerne kannst du das <a href="https://github.com/tallistroan/IngressMosaicMissionMap">Repository auf github</a> forken und deine eigene Version erstellen.
 
@@ -60,7 +58,6 @@
             Find the <a href="https://github.com/tallistroan/IngressMosaicMissionMap">code on github</a> and feel free to fork it and create your own version.</p>
         <p></p>
     </div>
-</div>
 <script src="js/vendor/jquery.js"></script>
 <script src="js/foundation.min.js"></script>
 <script>
