--- a/info.html
+++ b/info.html
@@ -27,14 +27,15 @@
         <section class="top-bar-section">
             <ul>
                 <li><a href="index.html">Karte</a></li>
+<!--
                 <li><a href="overview.html">Übersicht</a></li>
+-->
                 <li><a href="contact.html">Kontakt</a></li>
             </ul>
         </section>
     </nav>
 </div>
-<div class="row" data-equalizer>
-    <div class="large-12 columns panel" data-equalizer-watch>
+    <div class="panel">
         <!-- legend for the map, you can describe the map with words or also could provide a picture with a visible mosaic -->
         <h3>Legende</h3>
         <ul>
@@ -55,12 +56,11 @@
             in ihrer tatsächlichen Länge sichtbar sein.</p>
 
     </div>
-</div>
-<div class="row" data-equalizer>
-    <div class="large-12 columns panel" data-equalizer-watch>
+    <div class="panel">
         <!-- changelog visible for users -->
         <h3>Changelog</h3>
         <ul>
+            <li>01.12.2016: v3.0 - neue Kartentechnologie, Mosaikdaten auf den aktuellen Stand gebracht</li>
             <li>13.01.2016: v2.1 - Anzeige von Dauer + Länge + genaue Anzahl der Aktionen je Mosaik, Downloadmöglichkeit
                 der Mosaik-Route als kml-Datei
             <li>04.01.2016: v2.0 - komplett überarbeitetes Design, Portalanzahl total/unique für jedes Mosaik wird
@@ -72,7 +72,6 @@
 
 
     </div>
-</div>
 <script src="js/vendor/jquery.js"></script>
 <script src="js/foundation.min.js"></script>
 <script>
